# manim-code-blocks

./: LICENSE  README.md  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
src/: manim_code_blocks.py
src/manim_code_blocks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
