
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manim_code_blocks"
version = "1.0.1"
description = "Animate highlighted blocks of code in Manim"
readme = "README.md"
authors = [{ name = "Nicholas Iapalucci"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/NicholasIapalucci/Tokenize-All"